# ImageEditor

./: CMakeLists.txt  colortoolprocessor.cpp  colortoolprocessor.h  imagemanager.cpp  imagemanager.h  imagemanger.cpp  imagemanger.h  imageprocessor.cpp  imageprocessor.h  imagestorage.cpp  imagestorage.h  main.cpp  selectionmanager.cpp  selectionmanager.h
qml/: CenterPanel.qml  LeftPanel.qml  Main.qml  RightPanel.qml
qml/tools/color/: grayscale.qml
